src/view/browser/render/snapshots/nifi_lens__view__browser__render__action_history_modal__tests__snapshot_below_min_size.snap
---
source: src/view/browser/render/action_history_modal.rs
expression: "format!(\"{}\", term.backend())"
---
"           terminal too small           "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
