src/view/browser/render/snapshots/nifi_lens__view__browser__render__action_history_modal__tests__snapshot_empty.snap
---
source: src/view/browser/render/action_history_modal.rs
expression: "format!(\"{}\", term.backend())"
---
"┌ Action history · FetchKafka (showing 0 of 0) ────────────────────────────────────────────────────┐"
"│  time              user             op              type             source                      │"
"│ no actions recorded for this component                                                           │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│ [/ find] [n/N next] [Enter expand] [c copy] [r refresh] [Esc close]                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
