src/view/browser/render/snapshots/nifi_lens__view__browser__render__action_history_modal__tests__snapshot_loading.snap
---
source: src/view/browser/render/action_history_modal.rs
expression: "format!(\"{}\", term.backend())"
---
"┌ Action history · FetchKafka (loading…) ──────────────────────────────────────────────────────────┐"
"│  time              user             op              type             source                      │"
"│ loading…                                                                                         │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│ [/ find] [n/N next] [Enter expand] [c copy] [r refresh] [Esc close]                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
