src/view/browser/render/snapshots/nifi_lens__view__browser__render__action_history_modal__tests__snapshot_long_op_widens_column.snap
---
source: src/view/browser/render/action_history_modal.rs
expression: "format!(\"{}\", term.backend())"
---
"┌ Action history · FetchKafka (showing 2 of 2) ────────────────────────────────────────────────────┐"
"│  age      user             op                    type             source                         │"
"│  <AGE>    user0            Start Version Control Processor        FetchKafka                     │"
"│  <AGE>    user1            Configure             Processor        FetchKafka                     │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│[Esc] close · [Enter] expand · [/] find · [c] copy · [r] refresh                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
