src/view/browser/render/snapshots/nifi_lens__view__browser__render__action_history_modal__tests__snapshot_search_committed_with_match.snap
---
source: src/view/browser/render/action_history_modal.rs
expression: "format!(\"{}\", term.backend())"
---
"┌ Action history · FetchKafka (showing 5 of 5) ────────────────────────────────────────────────────┐"
"│  time              user             op              type             source                      │"
"│  2026-04-27T10:00:00Z user0            Configure       Processor        FetchKafka               │"
"│  2026-04-27T10:00:00Z user1            Configure       Processor        FetchKafka               │"
"│  2026-04-27T10:00:00Z user2            Configure       Processor        FetchKafka               │"
"│  2026-04-27T10:00:00Z user3            Configure       Processor        FetchKafka               │"
"│  2026-04-27T10:00:00Z user4            Configure       Processor        FetchKafka               │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│[Esc] close · [Enter] expand · [/] find · [c] copy · [r] refresh                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
