src/view/browser/render/snapshots/nifi_lens__view__browser__render__action_history_modal__tests__snapshot_search_input_active.snap
---
source: src/view/browser/render/action_history_modal.rs
expression: "format!(\"{}\", term.backend())"
---
"┌ Action history · FetchKafka (showing 5 of 5) ────────────────────────────────────────────────────┐"
"│  age      user             op              type             source                               │"
"│  <AGE>    user0            Configure       Processor        FetchKafka                           │"
"│  <AGE>    user1            Configure       Processor        FetchKafka                           │"
"│  <AGE>    user2            Configure       Processor        FetchKafka                           │"
"│  <AGE>    user3            Configure       Processor        FetchKafka                           │"
"│  <AGE>    user4            Configure       Processor        FetchKafka                           │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│/ user2_                                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
